# visq

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/features/: CMakeLists.txt  main.cpp
examples/fft/: CMakeLists.txt  main.cpp
examples/gaussian_blur/: CMakeLists.txt  main.cpp
examples/gradient/: CMakeLists.txt  main.cpp
examples/keypoint_detector/: CMakeLists.txt  main.cpp
examples/print_square/: CMakeLists.txt  main.cpp
examples/resize/: CMakeLists.txt  main.cpp
include/visq/: image.h  io.h
include/visq/features/: brief_keypoint_detector.h  fast_keypoint_detector.h  harris_corner_detector.h  ikeypoint_detector.h  keypoint.h
include/visq/geometry/: point_2d.h
include/visq/math/: dot.h  hadamard.h
include/visq/transform/: bilinear_interpolation.h  bilinear_resizer.h  border_extension.h  fft.h  filter.h  interpolation.h  nearest_neighbor_interpolation.h  resizer.h  sampler.h
include/visq/transform/border_extensions/: border_extension_factory.h  border_type.h  constant_border.h  mirror_border.h
include/visq/transform/filters/: gaussian_filter.h  gradient.h
include/visq/utils/: color.h  draw_keypoints.h  midpoint_circle.h  monochrome.h
src/: CMakeLists.txt  image.cpp  io.cpp  io.h
src/transform/: bilinear_resizer.cpp  fft.cpp  resizer.cpp
src/transform/filters/: gaussian_filter.cpp  gradient.cpp
src/utils/: draw_keypoints.cpp  midpoint_circle.cpp
test/: CMakeLists.txt  constant_border_extension_test.cpp  constant_border_extension_test.h  image_test.cpp  image_test.h  math_test.cpp  math_test.h  mirror_border_extension_test.cpp  mirror_border_extension_test.h  utils_test.cpp  utils_test.h
